# internal-research-agent-wk4

./: .gitignore  README.md  env.example  main.py  mcp_server.py  requirements.txt
agent/: agent_runner.py  mcp_insurance_client.py  prompts.py  tools.py
mcp_insurance/: check_google_setup.py  pyproject.toml  setup_google_auth.py  test_connection.py
providers/: bedrock.py  embeddings.py  vectorstore.py  websearch.py
utils/: citations.py
