[project]
name = "mcp-insurance"
version = "0.1.0"
description = "MCP server for Google Docs insurance queries"
authors = [
    {name = "Presidio", email = "dev@presidio.com"}
]
dependencies = [
    "mcp[cli]>=1.10.0",
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.100.0",
    "python-dotenv>=1.0.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88
